--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
-name = "examples"
+name = "eg-simple"
 version = "0.1.0"
 edition = "2021"
+
+[[bin]]
+name = "simple"
+path = "src/main.rs"
 
 [dependencies]
 derrick = { version = "1.0.0-rc1", path = ".." }
 sqlx = { version = "0.7", features = ["postgres"] }
+tokio = { version = "1.0", features = ["full"] }
