--- a/derrick-macros/Cargo.toml
+++ b/derrick-macros/Cargo.toml
@@ -5,6 +5,6 @@ edition.workspace = true
 authors.workspace = true
 
 [dependencies]
-derrick-backends.workspace = true
 derrick-core.workspace = true
 derrick-derive.workspace = true
+derrick-migrate.workspace = true
