--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
-name = "eg-simple"
+name = "pg-query-env"
 version = "0.1.0"
 edition = "2021"
 
 [[bin]]
-name = "simple"
+name = "pg-query-env"
 path = "src/main.rs"
 
 [dependencies]
 derrick = { version = "1.0.0-rc1", path = ".." }
-sqlx = { version = "0.7", features = ["postgres"] }
+env_logger = "0.11"
+sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"] }
 tokio = { version = "1.0", features = ["full"] }
