--- a/derrick-derive/Cargo.toml
+++ b/derrick-derive/Cargo.toml
@@ -12,3 +12,4 @@ quote = "1.0"
 regex = "1.10.0"
 syn = { version = "2.0", features = ["extra-traits"] }
 proc-macro2 = "1.0"
+prettyplease = "0.2.25"
