--- a/examples/pg-envvar-query/Cargo.toml
+++ b/examples/pg-envvar-query/Cargo.toml
@@ -8,7 +8,7 @@ name = "pg-envvar-query"
 path = "src/main.rs"
 
 [dependencies]
-derrick = { version = "1.0.0-rc1", path = ".." }
+derrick = { version = "1.0.0-rc1", path = "../.." }
 env_logger = "0.11"
 sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"] }
 tokio = { version = "1.0", features = ["full"] }
