--- a/derrick-migrate/Cargo.toml
+++ b/derrick-migrate/Cargo.toml
@@ -5,6 +5,7 @@ version.workspace = true
 authors.workspace = true
 
 [dependencies]
+base64 = "0.22"
 chrono = { version = "0.4", default-features = false }
 derrick-core.workspace = true
 futures-core = "0.3"
