--- a/derrick-migrate-cli/Cargo.toml
+++ b/derrick-migrate-cli/Cargo.toml
@@ -12,4 +12,5 @@ derrick-core.workspace = true
 derrick-migrate.workspace = true
 dotenvy = "0.15"
 env_logger = "0.11"
+log = "0.4"
 regex = "1.10.0"
