--- a/examples/pg-envvar-query/Cargo.toml
+++ b/examples/pg-envvar-query/Cargo.toml
@@ -12,5 +12,6 @@ clap = "4.5"
 derrick = { version = "1.0.0-rc1", path = "../.." }
 dotenvy = "0.15"
 env_logger = "0.11"
+log = "0.4"
 sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"] }
 tokio = { version = "1.0", features = ["full"] }
