--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ default-members = ["tern-core", "tern-cli", "tern-derive"]
 exclude = []
 
 [workspace.package]
-version = "0.1.0"
+version = "1.0.0"
 license = "MIT OR Apache-2.0"
 edition = "2021"
 repository = "https://github.com/quasi-coherent/tern"
@@ -30,8 +30,8 @@ authors.workspace = true
 repository.workspace = true
 
 [package.metadata.docs.rs]
-features = ["unstable-doc"]
-rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
 
 [features]
 cli = ["tern-cli"]
@@ -41,9 +41,9 @@ sqlx_mysql = ["tern-core/sqlx_mysql"]
 sqlx_sqlite = ["tern-core/sqlx_sqlite"]
 
 [workspace.dependencies]
-tern-core = { version = "=0.1.0", path = "tern-core" }
-tern-cli = { version = "=0.1.0", path = "tern-cli" }
-tern-derive = { version = "=0.1.0", path = "tern-derive" }
+tern-core = { version = "=1.0.0", path = "tern-core" }
+tern-cli = { version = "=1.0.0", path = "tern-cli" }
+tern-derive = { version = "=1.0.0", path = "tern-derive" }
 
 [dependencies]
 tern-core.workspace = true
