--- a/tern-cli/Cargo.toml
+++ b/tern-cli/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "tern-cli"
+description = "A CLI for `tern` migration tooling."
 version.workspace = true
 license.workspace = true
 edition.workspace = true
@@ -11,6 +12,5 @@ anyhow = "1.0"
 clap = { version = "4.5", features = ["derive", "env"] }
 console = "0.15"
 tern-core.workspace = true
-env_logger = "0.11"
 log = "0.4"
 regex = "1.10"
