--- a/tern-derive/Cargo.toml
+++ b/tern-derive/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "tern-derive"
+description = "Derive macros for `tern` migration tooling."
 version.workspace = true
 license.workspace = true
 edition.workspace = true
