--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,13 @@ members = [
   "tern-core",
   "tern-cli",
   "tern-derive",
-  "examples/custom-context",
+  "examples/*",
 ]
 default-members = ["tern-core", "tern-cli", "tern-derive"]
 exclude = []
 
 [workspace.package]
-version = "1.0.0"
+version = "1.0.1"
 license = "MIT OR Apache-2.0"
 edition = "2021"
 repository = "https://github.com/quasi-coherent/tern"
@@ -41,9 +41,9 @@ sqlx_mysql = ["tern-core/sqlx_mysql"]
 sqlx_sqlite = ["tern-core/sqlx_sqlite"]
 
 [workspace.dependencies]
-tern-core = { version = "=1.0.0", path = "tern-core" }
-tern-cli = { version = "=1.0.0", path = "tern-cli" }
-tern-derive = { version = "=1.0.0", path = "tern-derive" }
+tern-core = { version = "=1.0.1", path = "tern-core" }
+tern-cli = { version = "=1.0.1", path = "tern-cli" }
+tern-derive = { version = "=1.0.1", path = "tern-derive" }
 
 [dependencies]
 tern-core.workspace = true
