--- a/examples/custom-context/Cargo.toml
+++ b/examples/custom-context/Cargo.toml
@@ -10,4 +10,4 @@ tern = { path = "../..", features = ["cli", "sqlx_postgres"] }
 env_logger = "0.11"
 log = "0.4"
 sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
-tokio = { version = "1.0", features = ["rt", "macros", "rt-multi-thread"] }
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
