--- a/tern-core/Cargo.toml
+++ b/tern-core/Cargo.toml
@@ -7,6 +7,10 @@ edition.workspace = true
 authors.workspace = true
 repository.workspace = true
 
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
+
 [features]
 default = []
 
