--- a/Makefile.toml
+++ b/Makefile.toml
@@ -44,13 +44,13 @@ args = ["compose", "up", "--wait", "postgres"]
 command = "docker"
 args = ["compose", "up", "--wait", "mysql"]
 
-[tasks.run_example]
+[tasks.run-example]
 dependencies = ["pgenv"]
 env = { env_set = ["DATABASE_URL", "PACKAGE"] }
 command = "cargo"
 args = ["r", "-p", "${PACKAGE}", "--", "migrate", "apply-all"]
 
-[tasks.run_pg_example]
+[tasks.run-pgexample]
 env = { DATABASE_URL = "${POSTGRES_URL}", env_set = ["PACKAGE"] }
 run_task = "run_example"
 
