--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,12 @@ tern-cli = { version = "=4.0.0", path = "tern-cli" }
 tern-derive = { version = "=4.0.0", path = "tern-derive" }
 
 [dependencies]
+chrono = { version = "0.4.41", features = ["serde"] }
+futures-core = "0.3.31"
+display_json = "0.2.1"
+log = "0.4.27"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 tern-core.workspace = true
 tern-cli = { workspace = true, optional = true }
 tern-derive.workspace = true
