--- a/tern-cli/Cargo.toml
+++ b/tern-cli/Cargo.toml
@@ -8,9 +8,6 @@ authors.workspace = true
 repository.workspace = true
 
 [dependencies]
-anyhow = "1.0"
 clap = { version = "4.5.38", features = ["derive", "env"] }
-console = "0.15.11"
+futures-core = "0.3.31"
 tern-core.workspace = true
-log = "0.4.27"
-regex = "1.11.1"
