--- a/examples/examples.toml
+++ b/examples/examples.toml
@@ -2,6 +2,6 @@
 env = { PACKAGE = "custom-context" }
 run_task = "run_pg_example"
 
-[tasks.index-partitioned-table-concurrently]
-env = { PACKAGE = "index-partitioned-table-concurrently" }
+[tasks.partitioned]
+env = { PACKAGE = "partitioned" }
 run_task = "run_pg_example"
